# nenya

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ubuntu.yml  windows.yml
cmake/: Utilities.cmake
include/: nenya.hpp
test/: CMakeLists.txt
test/unit-tests/: CMakeLists.txt  nenya_test.cpp
